--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,102 @@
     <title>modelo</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div>
         <div class="cabeçalho">
-    <img src="img/primeira foto.jpg" alt="eu">
-        <ul id="home">sobre</ul>
-        <ul id="feedback">projetos</ul>
-        <ul id="coisa">experiencia</ul>
-        <ul id="contato">contato</ul>
-        <i><img src="icones/noun-github-4289652.svg" alt=""></i>
-        <i><img src="icones/noun-camera-4325388.svg" alt=""></i>
-   </div>
-   
+            <img src="img/primeira foto.jpg" alt="eu">
+            <ul id="home">sobre</ul>
+            <ul id="feedback">experiencia</ul>
+            <ul id="coisa">ferramentas</ul>
+            <ul id="contato">projetos</ul>
+            <ul id="contato">contato</ul>
+            <i><img src="icones/noun-github-4289652.svg" alt=""></i>
+            <i><img src="icones/noun-camera-4325388.svg" alt=""></i>
+        </div>
+
         <div class="conteudo">
-            <nav id="nav1">1</nav>
-            <nav id="nav2">2</nav>
+            <nav id="nav1">
+                <h1 id="titulo">Miguel Silva</h1>
+                <h5 id="subtitulo">Estudante de TI</h5>
+                <p id="texto">Atualmente, sou um estudante envolvido em uma educação dual: frequentando uma escola
+                    regular e
+                    cursando informática na Etec. Na escola, adquiro conhecimento diversificado e habilidades sociais,
+                    enquanto o curso técnico aprofunda meu interesse em tecnologia. Estou comprometido em aproveitar
+                    essas oportunidades para construir um futuro promissor.</p>
+
+
+            </nav>
+
             <nav id="nav3"><img id="foto2" src="img/foto principal.jpg" alt=""></nav>
         </div>
     </div>
-    <footer class="rodape">rodape</footer>
+    <footer class="textos">
+        <div id="experiencia">
+            <h1 id="titulof">linguagems</h1>
+            <div>
+                <p id="textof">Algumas das linguagems de programaçao que eu utilizo</p>
+            </div>
+            <div id="linguagens">
+                <div id="front">
+                    <div id="html">
+                        <img src="icones/html5.svg" alt="">
+                        <h1>HTML</h1>
+                    </div>
+                    <div id="css">
+                        <img src="icones/css3-alt.svg" alt="">
+                        <h1>CSS</h1>
+                    </div>
+                    <div id="js">
+                        <img src="icones/js.svg" alt="">
+                        <h1>JS</h1>
+                    </div>
+                </div>
+                <div id="dados">
+                    <h1>MSQL</h1>
+                </div>
+                <div id="back">
+                    <h1>C#</h1>
+                </div>
+            </div>
+            <div id="ferramentas">
+                <h1 id="tituloe">Experiencia</h1>
+                <p id="textoe">Embora minha experiência na área de Tecnologia da Informação (TI) seja limitada, meu
+                    entusiasmo e determinação para entrar nesse campo são inegáveis. Tenho acompanhado de perto as
+                    mudanças
+                    tecnológicas que moldam nosso mundo atual e sinto-me impulsionado a fazer parte desse cenário em
+                    constante evolução.
+
+                    Embora minha formação acadêmica seja em [sua formação acadêmica], reconheço que há um fosso entre o
+                    que
+                    aprendi na teoria e as habilidades práticas exigidas em TI. Para preencher essa lacuna, tenho
+                    dedicado
+                    tempo a cursos online, tutoriais e fóruns de TI, onde venho adquirindo conhecimento e habilidades
+                    essenciais.
+
+                    Apesar da minha inexperiência, trago consigo qualidades valiosas, como habilidades de resolução de
+                    problemas, pensamento crítico e um forte desejo de aprender. Acredito que minha capacidade de
+                    aprender
+                    rapidamente e minha dedicação são ativos que posso aplicar na área de TI.
+
+                    Estou disposto a aceitar estágios, programas de treinamento ou colaborações em projetos que me
+                    permitam
+                    adquirir experiência prática e aprender com profissionais experientes. Meu objetivo é crescer
+                    continuamente nessa carreira e me tornar um ativo valioso para qualquer equipe de TI.
+
+                    Estou aberto a desafios e estou disposto a enfrentar qualquer obstáculo para alcançar meu objetivo
+                    na
+                    TI. Acredito que com dedicação e aprendizado constante, posso construir uma carreira sólida e
+                    bem-sucedida neste campo emocionante e em constante evolução.
+
+                    Agradeço pela consideração e espero que possamos nos conectar em breve para discutir maneiras de
+                    colaborarmos e crescermos juntos no mundo da Tecnologia da Informação.</p>
+            </div>
+            <div id="projetosb">projetos</div>
+            <div id="contatob">contato</div>
+    </footer>
+
+    
 </body>
+
 </html>
